nginx-exercice-2/solution/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-unprivileged-2
  labels:
    app: nginx-unprivileged-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-unprivileged-2
  template:
    metadata:
      labels:
        app: nginx-unprivileged-2
        deployment: nginx-unprivileged-2
    spec:
      containers:
        - name: nginx-unprivileged-2
          image: nginxinc/nginx-unprivileged@sha256:731f382bbad9a874f9f27db9c82d9e671e603e2210386a8e2b6da36cf336fa75
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
            - name: nginx-conf-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: config-live
              mountPath: /etc/nginx/configmap
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: html-volume
          configMap:
            name: nginx-dashboard-2
        - name: nginx-conf-volume
          configMap:
            name: nginx-conf-2
        - name: config-live
          projected:
            sources:
              - configMap:
                  name: nginx-config-2
              - secret:
                  name: nginx-secret-2
                  items:
                    - key: USERNAME
                      path: USERNAME
